--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t gabrielciortea/docker-react-test -d Dockerfile.dev .
+  - docker build -t gabrielciortea/docker-react-test -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true gabrielciortea/docker-react-test npm run test
