--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
   - docker run -e CI=true gabrielciortea/docker-react-test npm run test
+
+deploy:
+provider: elasticbeanstalk
+region: "eu-west-1"
+app: "docker-react-test"
+env: "DockerReactTest-env"
+bucket_name: "elasticbeanstalk-eu-west-1-447349634735"
+bucket_path: "docker-react-test"
+on:
+  branch: master
+
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
