--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: "eu-west-1"
-  app: "docker-react-test"
-  env: "DockerReactTest-env"
-  bucket_name: "elasticbeanstalk-eu-west-1-447349634735"
-  bucket_path: "docker-react-test"
+  region: "eu-west-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-eu-west-2-315357178027"
+  bucket_path: "docker-react"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
